--- a/app/src/main/res/layout/dialog_yes_no_order_success_status.xml
+++ b/app/src/main/res/layout/dialog_yes_no_order_success_status.xml
@@ -1,70 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="400dp"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:background="@color/white"
+        android:gravity="center"
+        app:cardCornerRadius="10dp"
         tools:context=".uicontroler.dialog.YesNoOrderSuccessStatusDialog">
 
-        <!--        <LinearLayout android:orientation="horizontal"-->
-        <!--            android:id="@+id/linearLayout2"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:alpha="0.4"-->
-        <!--            android:background="@color/black" />-->
-
-        <FrameLayout
+        <LinearLayout
+            android:paddingVertical="20dp"
+            android:layout_marginHorizontal="20sp"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="@string/are_you_sure_that_you_ve_already_received_this_order"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
             <LinearLayout
-                android:layout_marginHorizontal="20dp"
-                android:orientation="vertical"
-                android:gravity="center_vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:text="Do you sure that you've already received this order ?"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:textAlignment="center"
-                    android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_cancel"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <LinearLayout
-                    android:layout_marginTop="20dp"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_cancel"
-                        android:text="CANCEL"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/bg_btn_cancel"
-                        android:textColor="@color/white"
-                        android:width="140dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_save"
-                        android:background="@drawable/bg_btn_save"
-                        android:text="YES"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/white"
-                        android:width="140dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:width="140dp"
+                    android:background="@drawable/bg_btn_cancel"
+                    android:text="@string/cancel"
+                    android:textColor="@color/white" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:width="140dp"
+                    android:background="@drawable/bg_btn_save"
+                    android:text="@string/confirm"
+                    android:textColor="@color/white" />
             </LinearLayout>
-        </FrameLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 </layout>
