--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -2,37 +2,43 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="order"
             type="com.example.aposs_buyer.model.Order" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="7dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <RelativeLayout
-                android:layout_margin="15dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_margin="15dp">
+
                 <TextView
                     android:id="@+id/orderText"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentStart="true"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:text="@string/order_time"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:text="@string/order_time"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -43,15 +49,16 @@
                     android:text="@{order.timeString}"
                     android:textColor="@color/dark_pray"
                     android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/orderText"
                     android:layout_alignParentStart="true"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
                     android:text="@string/status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -66,8 +73,8 @@
                     android:textSize="16sp" />
 
                 <ImageView
-                    statusIconData="@{order.status}"
                     android:id="@+id/statusIcon"
+                    statusIconData="@{order.status}"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_below="@+id/orderText"
@@ -106,7 +113,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/billingItems"
-                    billingItemData="@{order.billingItems}"
+                    limitBillingItemData="@{order.billingItems}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/BillingText"
@@ -114,15 +121,17 @@
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:itemCount="2"
                     tools:listitem="@layout/item_order_biling" />
+
                 <TextView
-                    android:gravity="center"
                     android:id="@+id/allOrder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/billingItems"
                     android:layout_marginVertical="5dp"
-                    android:textColor="@color/disable_pray"
+                    android:gravity="center"
                     android:text="@string/see_all_items_in_detail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:textColor="@color/disable_pray" />
+
                 <View
                     android:id="@+id/divider"
                     android:layout_width="match_parent"
