--- a/app/src/main/res/navigation/navigation_order.xml
+++ b/app/src/main/res/navigation/navigation_order.xml
@@ -9,7 +9,7 @@
         android:id="@+id/orderFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.OrderFragment"
         android:label="fragment_order"
-        tools:layout="@layout/fragment_order" >
+        tools:layout="@layout/fragment_order">
         <action
             android:id="@+id/action_orderFragment_to_detailOrderFragment"
             app:destination="@id/detailOrderFragment" />
@@ -18,24 +18,25 @@
         android:id="@+id/detailOrderFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.DetailOrderFragment"
         android:label="fragment_detail_order"
-        tools:layout="@layout/fragment_detail_order" >
-        <argument
-            android:name="id"
-            app:argType="long"
-            android:defaultValue="-1L" />
+        tools:layout="@layout/fragment_detail_order">
         <action
             android:id="@+id/action_detailOrderFragment_to_cancelOrderFragment"
             app:destination="@id/cancelOrderFragment" />
+        <argument
+            android:name="currentOrder"
+            android:defaultValue="@null"
+            app:argType="com.example.aposs_buyer.model.Order"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/cancelOrderFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.CancelOrderFragment"
         android:label="fragment_cancel_order"
-        tools:layout="@layout/fragment_cancel_order" >
+        tools:layout="@layout/fragment_cancel_order">
         <argument
             android:name="id"
-            app:argType="long"
-            android:defaultValue="-1L" />
+            android:defaultValue="-1L"
+            app:argType="long" />
         <action
             android:id="@+id/action_cancelOrderFragment_to_cancelOrderConfirmFragment"
             app:destination="@id/cancelOrderConfirmFragment" />
@@ -44,7 +45,7 @@
         android:id="@+id/cancelOrderConfirmFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.CancelOrderSuccessFragment"
         android:label="fragment_cancel_order_confirm"
-        tools:layout="@layout/fragment_cancel_order_confirm" >
+        tools:layout="@layout/fragment_cancel_order_confirm">
         <action
             android:id="@+id/action_cancelOrderConfirmFragment_to_orderFragment"
             app:destination="@id/orderFragment" />
