--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#33A48F</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#262626</color>
     
@@ -13,7 +13,7 @@
     <color name="disable_pray">#ADADAD</color>
     <color name="active_button">#060DD9</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_green">#28FFBF</color>
+    <color name="light_green">#33A48F</color>
     <color name="back_ground">#F3F3FF</color>
     <color name="dark_pray">#707070</color>
     <color name="gray">#ABAFBC</color>
