--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,7 @@
         <item name="android:screenOrientation">locked</item>
         <item name="android:statusBarColor">@color/light_green</item>
         <item name="colorAccent">@color/yellow</item>
+        <item name="android:colorPrimaryDark">@color/light_green</item>
     </style>
 
     <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
