--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -45,13 +45,13 @@
                 <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="10dp"
                     android:background="@color/light_green">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="20dp"
-                        android:layout_marginTop="10dp"
                         android:gravity="center|top"
                         android:orientation="vertical">
 
@@ -59,7 +59,6 @@
                             android:id="@+id/toolBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:orientation="horizontal">
 
                             <com.google.android.material.textfield.TextInputLayout
@@ -104,7 +103,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/toolBox"
                             android:layout_centerHorizontal="true"
-                            android:layout_marginVertical="10dp"
+                            android:layout_marginTop="20dp"
                             android:text="@string/cart"
                             android:textColor="@color/white"
                             android:textSize="30sp"
@@ -112,10 +111,10 @@
 
                         <ImageView
                             android:id="@+id/lnAboutUs"
-                            android:layout_width="wrap_content"
+                            android:layout_width="160dp"
+                            android:layout_marginStart="-20dp"
                             android:layout_height="20dp"
                             android:layout_below="@+id/toolBox"
-                            android:layout_marginStart="-10dp"
                             android:layout_marginTop="7dp"
                             android:contentDescription="@string/image"
                             android:src="@drawable/ic_logo" />
