--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -25,9 +25,10 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <RelativeLayout
+                    android:paddingVertical="10dp"
                     android:background="@color/light_green"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/title"
@@ -35,17 +36,18 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="55dp"
+                        android:layout_marginTop="65dp"
                         android:text="@string/favorite"
                         android:textColor="@color/white"
                         android:textSize="30sp"
                         android:textStyle="bold" />
+
                     <ImageView
                         android:id="@+id/lnAboutUs"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
-                        android:layout_marginStart="13dp"
-                        android:layout_marginTop="52dp"
+                        android:layout_marginStart="-20dp"
+                        android:layout_marginTop="40dp"
                         android:contentDescription="@string/image"
                         android:src="@drawable/ic_logo" />
                 </RelativeLayout>
