--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -299,7 +299,8 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="10dp"
                     android:background="@color/light_green">
 
                     <TextView
@@ -308,7 +309,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="55dp"
+                        android:layout_marginTop="65dp"
                         android:text="@string/home"
                         android:textColor="@color/white"
                         android:textSize="30sp"
@@ -316,10 +317,9 @@
 
                     <ImageView
                         android:id="@+id/lnAboutUs"
-                        android:layout_width="wrap_content"
+                        android:layout_width="160dp"
                         android:layout_height="20dp"
-                        android:layout_marginStart="13dp"
-                        android:layout_marginTop="52dp"
+                        android:layout_marginTop="40dp"
                         android:contentDescription="@string/image"
                         android:src="@drawable/ic_logo" />
                 </RelativeLayout>
