--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -27,11 +27,11 @@
                     <androidx.appcompat.widget.Toolbar
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:paddingVertical="10dp"
                         android:background="@color/light_green"
                         app:layout_collapseMode="pin">
 
                         <RelativeLayout
-                            android:layout_marginTop="10dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginHorizontal="20dp"
@@ -43,7 +43,6 @@
                                 android:id="@+id/toolBox"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
                                 android:orientation="horizontal">
 
                                 <com.google.android.material.textfield.TextInputLayout
@@ -86,17 +85,18 @@
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/toolBox"
                                 android:layout_centerHorizontal="true"
-                                android:layout_marginVertical="10dp"
+                                android:layout_marginTop="20dp"
                                 android:text="@string/message"
                                 android:textColor="@color/white"
                                 android:textSize="30sp"
                                 android:textStyle="bold" />
+
                             <ImageView
                                 android:id="@+id/lnAboutUs"
                                 android:layout_width="wrap_content"
                                 android:layout_height="20dp"
                                 android:layout_below="@+id/toolBox"
-                                android:layout_marginStart="-10dp"
+                                android:layout_marginStart="-40dp"
                                 android:layout_marginTop="7dp"
                                 android:contentDescription="@string/image"
                                 android:src="@drawable/ic_logo" />
