--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Apossbuyer" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="Theme.Apossbuyer" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/light_green</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
