add to cart success

--- a/app/src/main/res/layout/fragment_product_detail_dialog_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_product_detail_dialog_list_dialog.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.aposs_buyer.viewmodel.DetailProductDiaLogViewModel" />
+            type="com.example.aposs_buyer.viewmodel.DetailProductViewModel" />
         <variable
             name="color"
             type="android.graphics.Color" />
@@ -35,7 +35,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    imagesPath="@{viewModel.selectedProductImages.imageUri}"
+                    imagesPath="@{viewModel.selectedProductImages.get(0).imageUri}"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_marginHorizontal="10dp"
@@ -65,7 +65,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="@{viewModel.selectedProduct.priceToString()}"
+                        android:text="@{viewModel.selectedProductPrice}"
                         android:textColor="@color/active_button"
                         android:textStyle="bold" />
 
@@ -85,7 +85,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="@{String.valueOf(viewModel.productTypeCartAmount)}"
+                            android:text="@{String.valueOf(viewModel.cartAmount)}"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -109,14 +109,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:text="@{String.valueOf(viewModel.selectedProductQuantitiesDiaLog)}"
+                    android:text="@{String.valueOf(viewModel.selectedProductQuantities)}"
                     android:textColor="@color/black"
                     android:textStyle="normal" />
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/colorProperty"
-                colorProperty="@{viewModel.selectedProductColorPropertyDiaLog}"
+                colorProperty="@{viewModel.selectedProductColorProperty}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
@@ -130,7 +130,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/stringProperty"
-                stringProperty="@{viewModel.selectedProductStringPropertyDiaLog}"
+                stringProperty="@{viewModel.selectedProductStringProperty}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
@@ -178,7 +178,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="10dp"
-                            android:text="@{String.valueOf(viewModel.productTypeCartAmount)}"
+                            android:text="@{String.valueOf(viewModel.cartAmount)}"
                             android:textSize="16sp" />
 
                         <ImageView
