--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -107,20 +107,13 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:orientation="vertical">
                     <TextView
+                        android:id="@+id/userName"
+                        android:layout_marginTop="50dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.person.Name}"
-                        android:textSize="16sp"
-                        android:layout_marginTop="55dp"
                         android:textStyle="bold"
-                        android:textAllCaps="true"/>
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@{viewModel.person.email}"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:text="@string/slogan"
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -135,18 +128,18 @@
 
                     <LinearLayout
                         android:id="@+id/ln_edit_info"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
                         android:gravity="center"
                         android:background="@drawable/bg_edit_info">
                         <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="110dp"
-
-                            android:layout_height="110dp"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:src="@drawable/ic_app"
                             android:scaleType="centerCrop"
                             app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-                            android:background="@drawable/bg_edit_info"
-                            imagesPath="@{viewModel.person.image.imageUri}" />
+                            android:background="@color/light_green"
+                            />
                     </LinearLayout>
                 </LinearLayout>
 
