--- a/app/src/main/res/layout/fragment_cancel_order_confirm.xml
+++ b/app/src/main/res/layout/fragment_cancel_order_confirm.xml
@@ -1,107 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/back_ground"
+        android:background="@color/light_green"
         tools:context=".uicontroler.fragment.CancelOrderSuccessFragment">
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout2"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/back_ground"
-            android:text="@string/app_name"
-            android:theme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_constraintTop_toTopOf="parent"
-            app:liftOnScroll="true">
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/light_green"
-                app:layout_collapseMode="pin">
+                android:text="@string/app_name"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="35sp"
+                android:textStyle="bold" />
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginHorizontal="20dp"
-                    android:gravity="center|top"
-                    android:orientation="vertical"
-                    android:paddingBottom="15dp">
-
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp">
-
-                        <ImageView
-                            android:id="@+id/back"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:contentDescription="@string/image"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ic_back_white" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="@string/cancel_order"
-                            android:textAllCaps="false"
-                            android:textColor="@color/white"
-                            android:textSize="30sp"
-                            android:textStyle="bold" />
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="27dp"
-                            android:layout_height="27dp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true">
-
-                            <ImageView
-                                android:id="@+id/cart"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginEnd="20dp"
-                                android:contentDescription="@string/image"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/ic_cart_white"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent" />
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="10dp"
-                                android:layout_height="10dp"
-                                android:background="@color/red"
-                                android:backgroundTint="@color/red"
-                                app:cardCornerRadius="10dp"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintTop_toTopOf="parent">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:autoSizeMinTextSize="7sp"
-                                    android:gravity="center"
-                                    android:text="@string/defaultCartNumber"
-                                    android:textColor="@color/white"
-                                    android:textSize="7sp"
-                                    tools:ignore="SmallSp,SpUsage" />
-                            </androidx.cardview.widget.CardView>
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-                    </RelativeLayout>
-                </LinearLayout>
-            </androidx.appcompat.widget.Toolbar>
-        </com.google.android.material.appbar.AppBarLayout>
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/slogan"
+                android:textAllCaps="true"
+                android:textColor="@color/white" />
+        </LinearLayout>
         <LinearLayout
             android:id="@+id/linearLayout4"
             android:layout_width="match_parent"
@@ -117,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/image"
-                android:src="@drawable/ic_empty" />
+                android:src="@drawable/ic_app" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -130,7 +59,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/your_order_cancel_successfully"
-                    android:textColor="@color/dark_blue"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -141,7 +70,7 @@
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:text="@string/order_confirm_text"
-                    android:textColor="@color/dark_blue"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
@@ -150,8 +79,8 @@
             android:id="@+id/continueShopping"
             android:textAllCaps="false"
             android:text="@string/continue_shopping"
-            android:textColor="@color/white"
-            android:background="@color/light_green"
+            android:textColor="@color/light_green"
+            android:background="@drawable/bg_detail_component"
             android:layout_marginHorizontal="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
