--- a/app/src/main/res/layout/fragment_finish_check_out.xml
+++ b/app/src/main/res/layout/fragment_finish_check_out.xml
@@ -5,6 +5,7 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
+        android:background="@color/light_green"
         android:layout_height="match_parent">
 
 
@@ -20,17 +21,17 @@
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:textAllCaps="true"
-                android:textColor="@color/light_green"
+                android:textColor="@color/white"
                 android:textSize="35sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-10dp"
+                android:layout_marginTop="5dp"
                 android:text="@string/slogan"
                 android:textAllCaps="true"
-                android:textColor="@color/dark_pray" />
+                android:textColor="@color/white" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,7 +55,7 @@
                 android:layout_marginTop="15dp"
                 android:text="@string/your_order_placed"
                 android:textAllCaps="true"
-                android:textColor="@color/light_green"
+                android:textColor="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
@@ -64,7 +65,7 @@
                 android:layout_marginTop="15dp"
                 android:text="@string/check_out_success_message"
                 android:textAlignment="center"
-                android:textColor="@color/light_green"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -76,9 +77,9 @@
             android:layout_gravity="bottom"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_confirm_check_out"
+            android:background="@drawable/bg_detail_component"
             android:text="@string/continue_shopping"
-            android:textColor="@color/white"
+            android:textColor="@color/light_green"
             android:textSize="16sp" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
