--- a/app/src/main/res/navigation/navigation_order.xml
+++ b/app/src/main/res/navigation/navigation_order.xml
@@ -27,6 +27,9 @@
             android:defaultValue="@null"
             app:argType="com.example.aposs_buyer.model.Order"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_detailOrderFragment_to_chooseAddressFragment"
+            app:destination="@id/chooseAddressFragment" />
     </fragment>
     <fragment
         android:id="@+id/cancelOrderFragment"
@@ -49,5 +52,14 @@
         <action
             android:id="@+id/action_cancelOrderConfirmFragment_to_orderFragment"
             app:destination="@id/orderFragment" />
+    </fragment>
+    <fragment
+        tools:layout="@layout/fragment_choose_address"
+        android:id="@+id/chooseAddressFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.ChooseAddressFragment"
+        android:label="ChooseAddressFragment" >
+        <argument
+            android:name="context"
+            app:argType="string" />
     </fragment>
 </navigation>
